compute personality result + cleanup unused methods
