# service/src/questions/questions.controller.ts
@@ -1,15 +1,6 @@
-import {
-  Controller,
-  Get,
-  Post,
-  Body,
-  Patch,
-  Param,
-  Delete,
-} from '@nestjs/common';
+import { Controller, Get, Post, Body, Delete } from '@nestjs/common';
 import { QuestionsService } from './questions.service';
 import { CreateQuestionDto } from './dto/create-question.dto';
-import { UpdateQuestionDto } from './dto/update-question.dto';
 import { ApiResponse, ApiTags } from '@nestjs/swagger';
 import { Question } from './entities/question.entity';
 
@@ -32,27 +23,18 @@ export class QuestionsController {
   @ApiResponse({
     status: 200,
     type: [Question],
-    description: 'Returns Questions',
+    description: 'Returns All Questions',
   })
   findAll() {
     return this.questionsService.findAll();
   }
 
-  @Get(':id')
-  findOne(@Param('id') id: string) {
-    return this.questionsService.findOne(+id);
-  }
-
-  @Patch(':id')
-  update(
-    @Param('id') id: string,
-    @Body() updateQuestionDto: UpdateQuestionDto,
-  ) {
-    return this.questionsService.update(+id, updateQuestionDto);
-  }
-
-  @Delete(':id')
-  remove(@Param('id') id: string) {
-    return this.questionsService.remove(+id);
+  @Delete()
+  @ApiResponse({
+    status: 200,
+    description: 'Returns No Content',
+  })
+  removeAll() {
+    return this.questionsService.removeAll();
   }
 }
